# android_libusb_demo

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/libusbdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/libusbdemo/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/libusbdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
